Incluye datos adicionales en el Post
